// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Checkbox Default 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 jGJZfM"
  width="auto"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu Checkbox__StyledFormLabel-vu58cg-1 gqmvIF"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        <input
          className="Checkbox__Input-vu58cg-2 fuTURf"
          name="example"
          type="checkbox"
          value="green"
        />
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Checkbox__CheckmarkBox-vu58cg-0 irEJXT"
        >
          <svg
            aria-hidden="true"
            className="IconBase__StyledIconBase-sc-10cbji3-0 kZOWKt"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
            />
          </svg>
        </div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Checkbox__Label-vu58cg-3 jfGcbP"
        >
          Green
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Checkbox Disabled 1`] = `
Array [
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Disabled
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Checked
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 jGJZfM"
          width="auto"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu Checkbox__StyledFormLabel-vu58cg-1 gqmvIF"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                <input
                  className="Checkbox__Input-vu58cg-2 fuTURf"
                  defaultChecked={true}
                  disabled={true}
                  name="example"
                  type="checkbox"
                  value="green"
                />
                <div
                  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Checkbox__CheckmarkBox-vu58cg-0 irEJXT"
                >
                  <svg
                    aria-hidden="true"
                    className="IconBase__StyledIconBase-sc-10cbji3-0 kZOWKt"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                    />
                  </svg>
                </div>
                <span
                  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ecXtkX Checkbox__Label-vu58cg-3 jfGcbP"
                >
                  Green
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Not Checked
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 jGJZfM"
          width="auto"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu Checkbox__StyledFormLabel-vu58cg-1 gqmvIF"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                <input
                  className="Checkbox__Input-vu58cg-2 fuTURf"
                  disabled={true}
                  name="example"
                  type="checkbox"
                  value="blue"
                />
                <div
                  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Checkbox__CheckmarkBox-vu58cg-0 irEJXT"
                >
                  <svg
                    aria-hidden="true"
                    className="IconBase__StyledIconBase-sc-10cbji3-0 kZOWKt"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                    />
                  </svg>
                </div>
                <span
                  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ecXtkX Checkbox__Label-vu58cg-3 jfGcbP"
                >
                  Blue
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
]
`;

exports[`Storyshots Molecules | Input / Checkbox In a group 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <fieldset
    className="Fieldset__StyledFieldset-sc-1fwvu26-0 GQPdY"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
    >
      <legend
        className="NormalizedLegend__Legend-sc-1svgb20-0 Legend__StyledLegendAsLabel-x6z4g1-1 jtzsJR FormLabel__StyledLabel-skax1c-0 VHIlu"
        hidden={false}
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
        >
          Colors 
        </span>
      </legend>
    </div>
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hEIiGr"
    >
      <div
        className="FormField__Wrapper-ydn0fr-0 jGJZfM"
        width="auto"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu Checkbox__StyledFormLabel-vu58cg-1 gqmvIF"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              <input
                className="Checkbox__Input-vu58cg-2 fuTURf"
                name="example"
                type="checkbox"
                value="green"
              />
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Checkbox__CheckmarkBox-vu58cg-0 irEJXT"
              >
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 kZOWKt"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                  />
                </svg>
              </div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Checkbox__Label-vu58cg-3 jfGcbP"
              >
                Green
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="FormField__Wrapper-ydn0fr-0 jGJZfM"
        width="auto"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu Checkbox__StyledFormLabel-vu58cg-1 gqmvIF"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              <input
                className="Checkbox__Input-vu58cg-2 fuTURf"
                name="example"
                type="checkbox"
                value="blue"
              />
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Checkbox__CheckmarkBox-vu58cg-0 irEJXT"
              >
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 kZOWKt"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                  />
                </svg>
              </div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Checkbox__Label-vu58cg-3 jfGcbP"
              >
                Blue
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="FormField__Wrapper-ydn0fr-0 jGJZfM"
        width="auto"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu Checkbox__StyledFormLabel-vu58cg-1 gqmvIF"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              <input
                className="Checkbox__Input-vu58cg-2 fuTURf"
                name="example"
                type="checkbox"
                value="yellow"
              />
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Checkbox__CheckmarkBox-vu58cg-0 irEJXT"
              >
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 kZOWKt"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                  />
                </svg>
              </div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Checkbox__Label-vu58cg-3 jfGcbP"
              >
                Yellow
              </span>
            </div>
          </span>
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Molecules | Input / Checkbox In a group with error 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <fieldset
    className="Fieldset__StyledFieldset-sc-1fwvu26-0 GQPdY"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
    >
      <legend
        className="NormalizedLegend__Legend-sc-1svgb20-0 Legend__StyledLegendAsLabel-x6z4g1-1 jtzsJR FormLabel__StyledLabel-skax1c-0 VHIlu"
        hidden={false}
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
        >
          Colors 
        </span>
      </legend>
    </div>
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hEIiGr"
    >
      <div
        className="FormField__Wrapper-ydn0fr-0 jGJZfM"
        width="auto"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu Checkbox__StyledFormLabel-vu58cg-1 gqmvIF"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              <input
                className="Checkbox__Input-vu58cg-2 kthxAc"
                name="example"
                onChange={[Function]}
                required={true}
                type="checkbox"
                value="green"
              />
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Checkbox__CheckmarkBox-vu58cg-0 irEJXT"
              >
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 kZOWKt"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                  />
                </svg>
              </div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Checkbox__Label-vu58cg-3 jfGcbP"
              >
                Green
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="FormField__Wrapper-ydn0fr-0 jGJZfM"
        width="auto"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu Checkbox__StyledFormLabel-vu58cg-1 gqmvIF"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              <input
                className="Checkbox__Input-vu58cg-2 kthxAc"
                name="example"
                onChange={[Function]}
                required={true}
                type="checkbox"
                value="blue"
              />
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Checkbox__CheckmarkBox-vu58cg-0 irEJXT"
              >
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 kZOWKt"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                  />
                </svg>
              </div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Checkbox__Label-vu58cg-3 jfGcbP"
              >
                Blue
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="FormField__Wrapper-ydn0fr-0 jGJZfM"
        width="auto"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu Checkbox__StyledFormLabel-vu58cg-1 gqmvIF"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              <input
                className="Checkbox__Input-vu58cg-2 kthxAc"
                name="example"
                onChange={[Function]}
                required={true}
                type="checkbox"
                value="yellow"
              />
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Checkbox__CheckmarkBox-vu58cg-0 irEJXT"
              >
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 kZOWKt"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                  />
                </svg>
              </div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Checkbox__Label-vu58cg-3 jfGcbP"
              >
                Yellow
              </span>
            </div>
          </span>
        </label>
      </div>
    </div>
  </fieldset>
  <div>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hPnwKK"
    >
      <div
        className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
      >
        Error: 
      </div>
      This field is required
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Checkbox Required 1`] = `
Array [
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Required
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Default (without star)
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 jGJZfM"
          width="auto"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu Checkbox__StyledFormLabel-vu58cg-1 gqmvIF"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                <input
                  className="Checkbox__Input-vu58cg-2 fuTURf"
                  name="example"
                  required={true}
                  type="checkbox"
                  value="green"
                />
                <div
                  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Checkbox__CheckmarkBox-vu58cg-0 irEJXT"
                >
                  <svg
                    aria-hidden="true"
                    className="IconBase__StyledIconBase-sc-10cbji3-0 kZOWKt"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                    />
                  </svg>
                </div>
                <span
                  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Checkbox__Label-vu58cg-3 jfGcbP"
                >
                  Green
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        With star
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 jGJZfM"
          width="auto"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu Checkbox__StyledFormLabel-vu58cg-1 gqmvIF"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                <input
                  className="Checkbox__Input-vu58cg-2 fuTURf"
                  name="example"
                  required={true}
                  type="checkbox"
                  value="green"
                />
                <div
                  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Checkbox__CheckmarkBox-vu58cg-0 irEJXT"
                >
                  <svg
                    aria-hidden="true"
                    className="IconBase__StyledIconBase-sc-10cbji3-0 kZOWKt"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                    />
                  </svg>
                </div>
                <span
                  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Checkbox__Label-vu58cg-3 jfGcbP"
                >
                  Green *
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
]
`;

exports[`Storyshots Molecules | Input / Checkbox With all actions 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 jGJZfM"
  width="auto"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu Checkbox__StyledFormLabel-vu58cg-1 gqmvIF"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        <input
          className="Checkbox__Input-vu58cg-2 fuTURf"
          name="example6"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="checkbox"
          value="green"
        />
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Checkbox__CheckmarkBox-vu58cg-0 irEJXT"
        >
          <svg
            aria-hidden="true"
            className="IconBase__StyledIconBase-sc-10cbji3-0 kZOWKt"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
            />
          </svg>
        </div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Checkbox__Label-vu58cg-3 jfGcbP"
        >
          Green
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Checkbox With an error if not checked 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 jGJZfM"
  width="auto"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu Checkbox__StyledFormLabel-vu58cg-1 gqmvIF"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        <input
          className="Checkbox__Input-vu58cg-2 kthxAc"
          name="example"
          onChange={[Function]}
          required={true}
          type="checkbox"
          value="green"
        />
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Checkbox__CheckmarkBox-vu58cg-0 irEJXT"
        >
          <svg
            aria-hidden="true"
            className="IconBase__StyledIconBase-sc-10cbji3-0 kZOWKt"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
            />
          </svg>
        </div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Checkbox__Label-vu58cg-3 jfGcbP"
        >
          Green
        </span>
      </div>
    </span>
  </label>
  <div>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hPnwKK"
    >
      <div
        className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
      >
        Error: 
      </div>
      This field is required
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Checkbox With auto focus 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 jGJZfM"
  width="auto"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu Checkbox__StyledFormLabel-vu58cg-1 gqmvIF"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        <input
          autoFocus={true}
          className="Checkbox__Input-vu58cg-2 fuTURf"
          name="example"
          type="checkbox"
          value="green"
        />
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Checkbox__CheckmarkBox-vu58cg-0 irEJXT"
        >
          <svg
            aria-hidden="true"
            className="IconBase__StyledIconBase-sc-10cbji3-0 kZOWKt"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
            />
          </svg>
        </div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Checkbox__Label-vu58cg-3 jfGcbP"
        >
          Green
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Checkbox With checked (Controlled behaviour) 1`] = `
Array [
  <div
    className="FormField__Wrapper-ydn0fr-0 jGJZfM"
    width="auto"
  >
    <label
      className="FormLabel__StyledLabel-skax1c-0 VHIlu Checkbox__StyledFormLabel-vu58cg-1 gqmvIF"
      hidden={false}
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
        >
          <input
            checked={false}
            className="Checkbox__Input-vu58cg-2 fuTURf"
            name="example"
            onChange={[Function]}
            type="checkbox"
            value="green"
          />
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Checkbox__CheckmarkBox-vu58cg-0 irEJXT"
          >
            <svg
              aria-hidden="true"
              className="IconBase__StyledIconBase-sc-10cbji3-0 kZOWKt"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
              />
            </svg>
          </div>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Checkbox__Label-vu58cg-3 jfGcbP"
          >
            Green
          </span>
        </div>
      </span>
    </label>
  </div>,
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle Checkbox
  </button>,
]
`;

exports[`Storyshots Molecules | Input / Checkbox With default checked 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 jGJZfM"
  width="auto"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu Checkbox__StyledFormLabel-vu58cg-1 gqmvIF"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        <input
          className="Checkbox__Input-vu58cg-2 fuTURf"
          defaultChecked={true}
          name="example"
          type="checkbox"
          value="green"
        />
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Checkbox__CheckmarkBox-vu58cg-0 irEJXT"
        >
          <svg
            aria-hidden="true"
            className="IconBase__StyledIconBase-sc-10cbji3-0 kZOWKt"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
            />
          </svg>
        </div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Checkbox__Label-vu58cg-3 jfGcbP"
        >
          Green
        </span>
      </div>
    </span>
  </label>
</div>
`;
